# xuanchen_huiben

./: .eslintrc.json  README.md  build.bat  build_run.ps1  build_rust.bat  build_rust.ps1  index.html  package-lock.json  package.json  run.ps1  run_full.ps1  start_dev.ps1  vite.config.ts  开发记录.md  需求.md
docs/: Bug修复_20260226.md  US-001_开发记录_20260226.md  US-001_测试案例_20260226.md  US-002_开发记录_20260226.md  US-002_测试案例_20260226.md  US-003_开发记录_20260226.md  US-003_测试案例_20260226.md  US-004_开发记录_20260226.md  US-004_测试案例_20260226.md  US-005_开发记录_20260227_1553.md  US-005_测试案例_20260227_1553.md  US-006_开发记录_20260227_170527.md  US-006_测试案例_20260227_170527.md  US-007_开发记录_20260227_185016.md  US-007_测试案例_20260227_185016.md  dev_log_20260227_1533.md  dev_log_20260228_1331.md  gemini-3-pro-image-preview.md  开发记录.md  测试记录.md  需求.md
src/: App.css  App.tsx  api.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  lib.rs  main.rs
src-tauri/src/commands/: character_binding.rs  image_generator.rs  mod.rs  prompt_parser.rs
src/store/: index.ts
src/types/: index.ts
