[package]
name = "xuanchen-huiben"
version = "0.1.0"
description = "AI绘画桌面应用"
authors = ["you"]
edition = "2021"

[lib]
name = "xuanchen_huiben_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"

